package abstractfactory;

public interface Bebida {
    String servir();
}