package abstractfactory;

public interface ComboFactory {
    Bebida criarBebida();
    Sobremesa criarSobremesa();
}