package abstractfactory;

public interface Sobremesa {
    String servir();
}