package bridge;

public interface MetodoPagamento {
    void pagar(double valor);
}