package factorymethod;

public abstract class Hamburguer {
    public abstract String preparar();
}