package factorymethod;

public class HamburguerSimples extends Hamburguer {
    public String preparar() {
        return "Hamburguer Simples";
    }
}