package factorymethod;

public class HamburguerVegano extends Hamburguer {
    public String preparar() {
        return "Hamburguer Vegano";
    }
}