package strategy;

public interface DescontoStrategy {
    double calcular(double valor);
}