@startuml

skinparam classAttributeIconSize 0
skinparam shadowing false

title Sistema Hamburgueria - Diagrama de Classes

' ======================
' SINGLETON
' ======================
class ConfiguracaoSistema

ConfiguracaoSistema --> ConfiguracaoSistema : instancia unica

' ======================
' FACTORY METHOD + DECORATOR
' ======================
abstract class Hamburguer
class HamburguerSimples
class HamburguerVegano
class HamburguerFactory

Hamburguer <|-- HamburguerSimples
Hamburguer <|-- HamburguerVegano
HamburguerFactory --> Hamburguer

abstract class HamburguerDecorator
class Bacon
class QueijoExtra

Hamburguer <|-- HamburguerDecorator
HamburguerDecorator --> Hamburguer
HamburguerDecorator <|-- Bacon
HamburguerDecorator <|-- QueijoExtra

' ======================
' ABSTRACT FACTORY
' ======================
interface ComboFactory
interface Bebida
interface Sobremesa

class ComboTradicionalFactory
class ComboVeganoFactory

ComboFactory <|.. ComboTradicionalFactory
ComboFactory <|.. ComboVeganoFactory

ComboFactory --> Bebida
ComboFactory --> Sobremesa

' ======================
' BRIDGE
' ======================
interface MetodoPagamento
abstract class Pagamento
class Pix
class CartaoCredito
class PedidoPagamento

MetodoPagamento <|.. Pix
MetodoPagamento <|.. CartaoCredito

Pagamento --> MetodoPagamento
Pagamento <|-- PedidoPagamento

PedidoPagamento --> Pedido

' ======================
' STATE
' ======================
interface EstadoPedido
class Pedido
class PedidoRecebido
class PedidoEmPreparo
class PedidoPronto
class PedidoEntregue

EstadoPedido <|.. PedidoRecebido
EstadoPedido <|.. PedidoEmPreparo
EstadoPedido <|.. PedidoPronto
EstadoPedido <|.. PedidoEntregue

Pedido --> EstadoPedido

' ======================
' OBSERVER
' ======================
interface Observer
interface Subject

class Cliente
class PedidoObservable

Observer <|.. Cliente
Subject <|.. PedidoObservable

PedidoObservable --> Observer
PedidoObservable --> Pedido

' ======================
' STRATEGY
' ======================
interface DescontoStrategy
class DescontoClienteNovo
class DescontoClienteFiel
class DescontoPedido

DescontoStrategy <|.. DescontoClienteNovo
DescontoStrategy <|.. DescontoClienteFiel

DescontoPedido --> DescontoStrategy
DescontoPedido --> Pedido

' ======================
' CHAIN OF RESPONSIBILITY
' ======================
abstract class SuporteHandler
class Atendente
class Gerente
class Diretor

SuporteHandler <|-- Atendente
SuporteHandler <|-- Gerente
SuporteHandler <|-- Diretor

SuporteHandler --> SuporteHandler : proximo

Atendente --> Pedido
Gerente --> Pedido
Diretor --> Pedido

@enduml